# Hakathon-

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  requirements.txt
backend/: Dockerfile  logging_config.py  settings.py
backend/agents/: supervisor.py
backend/agents/analytics/: graph.py  planner.py
backend/agents/analytics/prompts/: analyst.py
backend/agents/ui_builder/: a2ui_schemas.py  a2ui_tools.py  graph.py  prompts.py
backend/api/: deps.py  main.py
backend/toolkits/: mcp_client.py
frontend/: .env.example  Dockerfile  index.html  package.json
frontend/src/: App.tsx  styles.css  vite-env.d.ts
frontend/src/components/a2ui/: ChartRenderer.tsx  KpiRenderer.tsx  MarkdownRenderer.tsx  RegisterActions.tsx  TableRenderer.tsx  types.ts
mcp_server/: Dockerfile  cache.py  pyproject.toml  server.py
mcp_server/tools/: docling_tools.py  pandas_tools.py
src/: database.py  logging_config.py  models.py  settings.py
src/api/: main.py
src/services/: grafana_helper.py
src/services/AnalystAgent/: toolkit.py
src/services/AnalystAgent/graph/: analystv1.py  plannerv1.py
src/services/AnalystAgent/prompts/: analyst.py  planner.py
src/services/DashboardAgent/graph/: dashboardv1.py
src/services/DashboardAgent/prompts/: dashboard.py
src/services/ReportAgent/graph/: report.py  schemas.py
src/services/ReportAgent/prompts/: report.py
test/graphs_states/analyst/: analysis.md  doc.md  plan.md
test/graphs_states/grafana/: panels.json
test/graphs_states/report/: doc_description_code.md  report.md  report.py  streamlit_code.md
