[project]
name = "data-mcp"
version = "0.1.0"
description = "MCP server local que expone Pandas + Docling para el AnalyticsAgent."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.10.0",
    "pandas>=2.2.0",
    "docling>=2.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.7.0",
]

[project.scripts]
data-mcp = "mcp_server.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]
